--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "admin/php-mathpix-api",
+    "name": "yangcp/php-mathpix-api",
     "authors": [
         {
             "name": "ycp19940225",
